# make

./: README.md  make.bat  pyproject.toml  script.py
makefile/: __init__.py  __main__.py
