[project]
name = "makefile"
dynamic = ["version"]
description = "Makes a file with the given filename, encoded in UTF-8"
authors = [
    { name = "FloatingInt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path="script.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include=[
    "script.py",
    "make.bat" # I don't know yet if this is the proper way to include a .bat script
]
